[package]
name = "cita-auth"
version = "20.2.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
clap = "2"
dotenv = "0.13.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
cita-logger = "0.1.1"
cita-types = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
cita-directories = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
util = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
error = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
pubsub = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
libproto = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
cita-crypto = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
tx_pool = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
jsonrpc-types = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
uuid = { version = "0.7", features = ["v4"] }
lru = "0.1"
rayon = "1.2"
hashable = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
cita-database = "0.1"

[dev-dependencies]
tempfile = "2"
tempdir = "0.3.7"
quickcheck = "0.7.2"

[build-dependencies]
util = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }

[features]
default = ["secp256k1", "sha3hash", "rabbitmq"]
secp256k1 = ["cita-crypto/secp256k1", "libproto/secp256k1", "tx_pool/secp256k1"]
ed25519 = ["cita-crypto/ed25519", "libproto/ed25519", "tx_pool/ed25519"]
sm2 = ["cita-crypto/sm2", "libproto/sm2", "tx_pool/sm2"]
sha3hash = ["libproto/sha3hash", "tx_pool/sha3hash"]
blake2bhash = ["libproto/blake2bhash", "tx_pool/blake2bhash"]
sm3hash = ["libproto/sm3hash", "tx_pool/sm3hash"]
rabbitmq = ["pubsub/rabbitmq"]
zeromq = ["pubsub/zeromq"]
kafka = ["pubsub/kafka"]
