[package]
name = "core"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
bincode = "0.8.0"
serde = "1.0"
serde_derive = "1.0"
rustc-hex = "1.0"
lazy_static = "1.4.0"
time = "0.1"
crossbeam = "0.2"
cita-logger = "0.1.1"
common-types = { path = "../types" }

libproto = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
cita-ed25519 = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
cita-secp256k1 = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
cita-types = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
cita-crypto = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
cita-merklehash = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
hashable = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
proof = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
jsonrpc-types = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
rlp = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
util = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
cita-database = "0.1"
pubsub = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }

[dev-dependencies]
rand = "0.3"
cpuprofiler = "0.0.3"
tempdir = "0.3.7"

[features]
default = ["secp256k1", "sha3hash"]
secp256k1 = ["cita-crypto/secp256k1", "libproto/secp256k1", "proof/secp256k1"]
ed25519 = ["cita-crypto/ed25519", "libproto/ed25519", "proof/ed25519"]
sm2 = ["cita-crypto/sm2", "libproto/sm2", "proof/sm2"]
sha3hash = ["hashable/sha3hash", "libproto/sha3hash", "proof/sha3hash"]
blake2bhash = ["hashable/blake2bhash", "libproto/blake2bhash", "proof/blake2bhash"]
sm3hash = ["hashable/sm3hash", "libproto/sm3hash", "proof/sm3hash"]
